--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-community/masked-view": "^0.1.6",
     "@react-navigation/native": "^5.0.3",
     "@react-navigation/stack": "^5.0.3",
+    "@svgr/cli": "^5.1.0",
     "axios": "^0.19.2",
     "immer": "^5.3.6",
     "json-server": "^0.16.0",
@@ -23,10 +24,12 @@
     "react-native-reanimated": "^1.7.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.0.0-beta.2",
+    "react-native-svg": "^11.0.1",
     "react-native-vector-icons": "^6.6.0",
     "react-redux": "^7.1.3",
     "reactotron-react-native": "^4.0.3",
     "reactotron-redux": "^3.1.2",
+    "reactotron-redux-saga": "^4.2.3",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
     "styled-components": "^5.0.1"
@@ -48,6 +51,7 @@
     "jest": "^25.1.0",
     "metro-react-native-babel-preset": "^0.58.0",
     "prettier": "^1.19.1",
+    "react-native-svg-transformer": "^0.14.3",
     "react-test-renderer": "16.9.0"
   },
   "jest": {
